<resources>
    <string name="app_name">Dancing Player</string>
    <string name="music_player_name">dancing player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="playlist_deleted">Playlist Deleted Successfully</string>
    <string name="playlist_modified">Playlist Modified Successfully</string>
    <string name="playlist_created">New Playlist Created</string>
    <string name="song_present_in_playlist">Song Already Present In Playlist</string>
    <string name="song_added_to_playlist">Song Added To Playlist</string>
    <string name="song_details">Song Details</string>
    <string name="song">Song</string>
    <string name="deleted">Deleted</string>
    <string name="end_of_list">End of List</string>
    <string name="deletion_error">Oops, there was some error in deletion!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing">nothing</string>
    <string name="string_player_name">dancing player</string>
    <string name="songs_list">SONGS_LIST</string>
    <string name="song_play">SONG_PLAY</string>
    <string name="album_art">Album Art</string>
    <string name="play_previous_song">Play Previous Song</string>
    <string name="play_song">Play Song</string>
    <string name="play_next_song">Play Next Song</string>
    <string name="back_to_list">Go Back To Song List Screen</string>
    <string name="song_options">Song Options</string>
    <string name="repeat_song">Repeat Song</string>
    <string name="shoffle_song">Shoffle Song</string>
    <string name="pause_song">Pause Song</string>
    <string name="replay_previous_10_seconds">Replay Previous 10 Seconds</string>
    <string name="previous_song">Previous Song</string>
    <string name="forward_next_10_seconds">Forward Next 10 Seconds</string>
    <string name="next_song">Next Song</string>
    <string name="app_menu_options">App Menu Options</string>
    <string name="sort_songs_by">Sort Songs By:</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="date_added">Date Added</string>
    <string name="songs_sort">SONGS_SORT</string>
    <string name="your_settings">Your Settings</string>
    <string name="select_player_theme">Select Player Theme:</string>
    <string name="gradient_colors">Gradient Colors</string>
    <string name="theme_set_successful">Theme successfully set as</string>
    <string name="sort_successful">successfully sorted list</string>
    <string name="back_pressed">Back Pressed</string>
    <string name="rescan_device">Rescan Device</string>
    <string name="rescanned">Device Rescanned</string>
    <string name="allow_access">Allow Access</string>
    <string name="please_give_us_access_to_your_songs_library">Please Give Us Access To Your Songs Library:</string>
    <string name="upwards_pointing">upwards pointing</string>
    <string name="optional_permissions_allow"><![CDATA[ Optionally go to : \n\nSettings -> Apps / Application Manager ->\nDancing Player ->  Permissions -> Allow Permissions]]></string>
    <string name="bottom_image">bottom image</string>
    <string name="app_icon">app icon</string>
    <string name="delete_song">Delete Song</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="music_player_for_all">Music Player For All</string>
    <string name="rate_song">rate song</string>
    <string name="show_playlists">Show Playlists</string>
    <string name="up_down_playlist_fragment">Up Down Playlist Fragment</string>
    <string name="create_new">CREATE NEW</string>
    <string name="edit">edit</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="remove_from_playlist">remove from playlist</string>
    <string name="remove_from_playlist_str">Remove From This PLaylist</string>
    <string name="edit_dialog_fragment">EDIT_DIALOG_FRAGMENT</string>
    <string name="edit_cancel">Playlist Edit Action Cancelled</string>
    <string name="creat_cancel">Please Creation Action Cancelled</string>
    <string name="enter_playlist_name">Please Enter A Playlist Name</string>
    <string name="number_of_songs_to_display_for_categories">Number Of Songs To Display For Playlist:</string>
    <string name="most_played">Most Played:</string>
    <string name="recently_played">Recently Played:</string>
    <string name="recently_added">Recently Added:</string>
    <string name="first_10">10</string>
    <string name="first_50">50</string>
    <string name="first_100">100</string>
    <string name="retry">Rescan</string>
    <string name="moving_on_string">Thank you! Moving on..</string>
    <string name="permission_denied_string">Permission denied. Please allow to continue..</string>
</resources>
