<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparency_black"
    tools:context="com.robillo.oreomusicplayer.views.activities.main.songs_sort_frag.SongsSortFragment">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:cardElevation="5sp">

        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10sp"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:paddingTop="10sp"
                android:text="@string/sort_songs_by"
                android:textColor="@color/colorTextOne"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3sp"
                android:background="@color/colorTextOne"
                tools:ignore="ContentDescription,SmallSp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="100sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/title"
                        android:textColor="@color/colorTextTwo"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:background="@color/colorTextOne"
                        tools:ignore="ContentDescription,SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/artist"
                        android:textColor="@color/colorTextTwo"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:background="@color/colorTextOne"
                        tools:ignore="ContentDescription,SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/album"
                        android:textColor="@color/colorTextTwo"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:background="@color/colorTextOne"
                        tools:ignore="ContentDescription,SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/duration"
                        android:textColor="@color/colorTextTwo"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:background="@color/colorTextOne"
                        tools:ignore="ContentDescription,SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/date_added"
                        android:textColor="@color/colorTextTwo"
                        android:textSize="18sp" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
