<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    tools:context="com.robillo.oreomusicplayer.views.activities.theme_change.ThemeChangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/colorTextThree"
            tools:ignore="ContentDescription,SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/white">

            <ImageButton
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/go_back_to_main"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:contentDescription="@string/back_pressed"
                android:background="?attr/selectableItemBackground"
                android:tint="@color/colorTextOne"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorTextOne"
                android:text="@string/your_settings"
                android:textSize="25sp"
                android:gravity="center"/>

            <ImageButton
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                tools:ignore="ContentDescription"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="@color/transparency_black"
            tools:ignore="ContentDescription,SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextOne"
            android:text="@string/select_player_theme"
            android:textSize="20sp"
            android:padding="20sp"
            android:gravity="start|center_vertical"/>

        <ImageView
            android:layout_width="150sp"
            android:layout_height="3sp"
            android:background="@color/transparency_black"
            tools:ignore="ContentDescription,SmallSp" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_view"
            android:background="@color/colorTextFour"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/row_theme_colors">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
