<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:id="@+id/bottom_controller"
    android:visibility="gone"
    tools:visibility="visible"
    android:layout_marginBottom="50sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/readBlack"
            tools:ignore="ContentDescription,SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@color/white"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded"
            android:id="@+id/launch_play_frag_one">

            <View
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:visibility="invisible"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/play_previous_song"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/play_previous_song"
                android:src="@drawable/ic_skip_previous_black_24dp" />

            <ImageButton
                android:id="@+id/play_pause_song"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/play_song"
                android:src="@drawable/ic_play_arrow_black_24dp" />

            <ImageButton
                android:id="@+id/play_next_song"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/play_next_song"
                android:src="@drawable/ic_skip_next_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            android:id="@+id/launch_play_frag_two"
            tools:background="@color/black">

            <TextView
                android:id="@+id/current_song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120sp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="5sp"
                tools:ignore="HardcodedText,MissingPrefix,RtlHardcoded,RtlSymmetry"
                tools:text="I'll be your reason"
                android:scrollHorizontally="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:layout_marginBottom="5sp"
                android:gravity="end|center_vertical"
                android:paddingRight="10sp"/>

            <TextView
                android:id="@+id/current_song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,MissingPrefix,RtlHardcoded,RtlSymmetry"
                tools:text="Illenium"
                android:singleLine="true"
                android:gravity="end|center_vertical"
                android:layout_marginLeft="120sp"
                android:paddingRight="10sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/colorTextOne"
                tools:ignore="ContentDescription,SmallSp"
                android:id="@+id/bottom_line"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:cardCornerRadius="55sp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0sp">

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="90sp"
        android:layout_height="90sp"
        app:cardCornerRadius="50sp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="10sp"
        app:cardElevation="0sp"
        tools:cardBackgroundColor="@color/black"
        android:id="@+id/rotate_view_album_art">

        <ImageView
            android:id="@+id/current_song_album_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            tools:ignore="ContentDescription,RtlHardcoded"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/current_song_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="35sp"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,MissingPrefix,RtlHardcoded,RtlSymmetry"
        tools:text="( 3:40 )" />

</FrameLayout>